--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>timanställd.se – Allt om timanställning</title>
+    <meta name="description" content="Snabba svar om timanställning. Lön, semester, sjukdom, rättigheter, skatt och praktiska situationer för dig som är timanställd." />
+    <meta name="author" content="timanställd.se" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="timanställd.se – Allt om timanställning" />
+    <meta property="og:description" content="Snabba svar om lön, semester, rättigheter och mer för timanställda." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
